# q-engage-lite

./: .coverage  .gitignore  CHANGELOGS.md  README.md  docker-compose.yml  pyproject.toml  service  settings.default.json  tracker
docker/: Dockerfile.base  Dockerfile.service  Dockerfile.tracker
docs/: QUICKSTART.md
src/: __init__.py
src/core/: __init__.py
src/core/classification/: gender_classificator.py
src/core/observer/: driver.py  event.py  listener.py
src/core/utils/: connector.py  memory_storage.py  pipeline.py  task.py
src/service/: __init__.py  __main__.py
src/tracker/: __init__.py  __main__.py
src/tracker/repositories/: __init__.py  detection_repository.py  detection_repository_interface.py
src/tracker/tasks/: __init__.py  detection.py  gender_classification.py  show_results.py  store.py  track.py
tests/: __init__.py  conftest.py  test_pipeline_integration.py  test_tasks.py
tests/callback_mock/: README.md  __main__.py
tests/results/: .gitignore  .gitkeep
