[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "q-engage-lite"
version = "1.0.0"
description = "A lightweight version of Q-Engage for small to medium-sized businesses with AI-powered edge detection and MQTT service"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Quallity Solutions"}
]
keywords = ["mqtt", "computer-vision", "ai", "edge-detection", "tracker", "ultralytics", "yolo"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Communications",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Multimedia :: Video"
]

dependencies = [
    "paho-mqtt>=2.0.0,<3.0.0",
    "ultralytics>=8.0.0",
    "opencv-python>=4.12.0.88",
    "numpy>=1.26.4,<2.3.0",
    "pillow>=12.1.1",
    "lap>=0.4.0",
    "pygobject>=3.42.0",
    "torch>=2.10.0",
    "torchvision>=0.25.0"

]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.5.0"
]

[project.scripts]
q-engage-tracker = "src.tracker.__main__:main"
q-engage-service = "src.service.__main__:main"
tracker = "src.tracker.__main__:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.black]
line-length = 100
target-version = ['py39', 'py310', 'py311', 'py312']
include = '\.pyi?$'

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
addopts = "-v --cov=src --cov-report=term-missing"

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
